sources/digitransit/gtfsrt-mqtt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gtfsrt-mqtt
  labels:
    app: gtfsrt-mqtt
spec:
  selector:
    matchLabels:
      app: gtfsrt-mqtt
  template:
    metadata:
      labels:
        app: gtfsrt-mqtt
    spec:
      containers:
      - name: gtfsrt-mqtt
        image: hsldevcom/gtfsrthttp2mqtt
        # https://github.com/HSLdevcom/gtfsrthttp2mqtt#configuration
