sources/digitransit/digitransit-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: digitransit-ui
spec:
  selector:
    app: digitransit-ui
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: digitransit-ui
  labels:
    app: digitransit-ui
spec:
  selector:
    matchLabels:
      app: digitransit-ui
  template:
    metadata:
      labels:
        app: digitransit-ui
    spec:
      containers:
      - name: digitransit-ui
        # image: verschwoerhaus/digitransit-ui:1172406
        image: hsldevcom/digitransit-ui:ci-f62dbcf83f828ccbd6721b24ad4dabf9335e3407
        ports:
        - containerPort: 8080
