sources/digitransit/digitransit.yaml
apiVersion: v1
kind: Service
metadata:
  name: digitransit
spec:
  selector:
    app: digitransit
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: digitransit
  labels:
    app: digitransit
spec:
  selector:
    matchLabels:
      app: digitransit
  template:
    metadata:
      labels:
        app: digitransit
    spec:
      containers:
      - name: digitransit
        # image: codeformuenster/digitransit-ui:master-test4
        # image: codeformuenster/digitransit-ui:master-test1
        image: codeformuenster/digitransit-ui:master-test3
        # image: hsldevcom/digitransit-ui:ci-059f14a09bdd93ee45c05ddbdb54b20331c89160
        # command: ["yarn", "run", "start"]
        command: ["/usr/local/bin/node", "server/server"]
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: digitransit-cfm-config
          mountPath: /opt/digitransit-ui/app/configurations/config.cfm.js
          subPath: config.cfm.js
      #   - name: digitransit-cfm-config
      #     mountPath: /opt/digitransit-ui/app/configurations/config.default.js
      #     subPath: config.default.js
      #   - name: digitransit-cfm-config
      #     mountPath: /opt/digitransit-ui/sass/themes/cfm/main.scss
      #     subPath: main.scss
      #   - name: digitransit-cfm-config
      #     mountPath: /opt/digitransit-ui/sass/themes/cfm/_theme.scss
      #     subPath: _theme.scss
      volumes:
      - name: digitransit-cfm-config
        configMap:
          name: digitransit-cfm
