sources/digitransit/graphiql.yaml
apiVersion: v1
kind: Service
metadata:
  name: graphiql
spec:
  selector:
    app: graphiql
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphiql
  labels:
    app: graphiql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graphiql
  template:
    metadata:
      labels:
        app: graphiql
    spec:
      containers:
      - name: graphiql
        image: codeformuenster/digitransit-graphiql
        ports:
        - containerPort: 8080
        # env:
        # - name: URL_PREFIX
        #   # ${URL_PREFIX}/routing/v1/routers/${router}/index/graphql
        #   value: https://api.digitransit.codeformuenster.org
        #   # https://api.digitransit.codeformuenster.org/graphiql/cfm
        readinessProbe:
          periodSeconds: 10
          timeoutSeconds: 10
          failureThreshold: 2
          httpGet:
            port: 8080
            path: "/graphiql/cfm"
        livenessProbe:
          initialDelaySeconds: 60
          periodSeconds: 60
          timeoutSeconds: 10
          failureThreshold: 2
          httpGet:
            port: 8080
            path: "/graphiql/cfm"
        resources:
          requests:
            memory: "64Mi"
            cpu: "200m"
          limits:
            memory: "64Mi"
            cpu: "1000m"
