sources/digitransit/mosquitto.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
spec:
  selector:
    app: mosquitto
  ports:
  - name: mqtt
    protocol: TCP
    port: 1883
    # targetPort: 1883
  - name: websockets
    protocol: TCP
    port: 9001
    # targetPort: 9001

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  labels:
    app: mosquitto
spec:
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
      - name: mosquitto
        image: eclipse-mosquitto
        ports:
        - name: mqtt
          containerPort: 1883
        - name: websockets
          containerPort: 9001
        volumeMounts:
        - name: mosquitto-conf
          mountPath: /mosquitto/config/mosquitto.conf
          subPath: mosquitto.conf
      volumes:
      - name: mosquitto-conf
        configMap:
          name: mosquitto
