sources/digitransit/opentripplanner.yaml
apiVersion: v1
kind: Service
metadata:
  name: opentripplanner
spec:
  selector:
    app: opentripplanner
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opentripplanner
  labels:
    app: opentripplanner
spec:
  # replicas: 5
  # strategy:
  #   type: RollingUpdate
  #   rollingUpdate:
  #     maxSurge: 25%
  #     maxUnavailable: 0
  selector:
    matchLabels:
      app: opentripplanner
  template:
    metadata:
      labels:
        app: opentripplanner
    spec:
      containers:
      - name: opentripplanner
        image: codeformuenster/opentripplanner-graph
        # image: codeformuenster/opentripplanner-cfm
        command: ["java",
          "-Duser.timezone=Europe/Berlin",
          # "-Dlogback.configurationFile=/opt/opentripplanner/debug-logback.xml",
          "-jar", "/opt/opentripplanner/otp-shaded.jar",
          "--server",
          "--basePath", "./",
          "--graphs", "./graphs",
          # "--basePath", "/var/otp",
          # "--graphs", "/var/otp/graphs",
          "--router", "cfm"]

        # --cache # pv?
        #   The directory under which to cache OSM and NED tiles. Default is
        #   BASE_PATH/cache.

        # env:
        # - name: JAVA_OPTS
        #   value: "-Xms8G -Xmx8G"

        ports:
        - containerPort: 8080
        # readinessProbe:
        #   periodSeconds: 10
        #   timeoutSeconds: 15
        #   failureThreshold: 2
        #   httpGet:
        #     port: 8080
        #     path: "/otp/routers/finland/"
        # securityContext:
        #   allowPrivilegeEscalation: false
        # resources:
        #   requests:
        #     memory: 11216Mi
        #     cpu: "6000m"
        #   limits:
        #     memory: 11216Mi
        #     cpu: "7000m"
        volumeMounts:
        - name: config
          mountPath: /opt/opentripplanner/graphs/cfm/router-config.json
          # mountPath: /var/otp/graphs/cfm/router-config.json
          subPath: router-config.json
        - name: config
          mountPath: /opt/opentripplanner/debug-logback.xml
          subPath: debug-logback.xml
      volumes:
      - name: config
        configMap:
          name: router-config

        # FIXME add readiness probe for:
        # 22:40:06.192 INFO (NetworkListener.java:755) Started listener bound to [0.0.0.0:8080]
        # 22:40:06.227 INFO (NetworkListener.java:755) Started listener bound to [0.0.0.0:8081]
        # 22:40:06.231 INFO (HttpServer.java:300) [HttpServer] Started.
        # 22:40:06.232 INFO (GrizzlyServer.java:154) Grizzly server running.
